test_suite/tests/ui/float/derive/ord_without_finite.stderr
error: To derive Ord trait on float-based type there must be validation that proves that inner value is not NaN.
       Consider adding:
           validate(finite)
 --> tests/ui/float/derive/ord_without_finite.rs:4:10
  |
4 | #[derive(Ord)]
  |          ^^^
